--- a/src/main/webapp/marin.xhtml
+++ b/src/main/webapp/marin.xhtml
@@ -5,12 +5,18 @@
       xmlns:h="http://java.sun.com/jsf/html">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel ="stylesheet" href = "karim.css" />
 	<title>Gestion des marins</title>
 </head>
 <body>
+<div>
+<img src=" http://localhost:8080/paumardproject/marin.jpg" alt="" style="width: 100%; height: 173px"/>
+</div>
+
+<div id="maDivGauche" style="float:left; width: 378px">
 <h3>Création de marin</h3>
 
-	<h:form>
+	<h:form style="width: 419px; ">
 
 	<table cellspacing="3" cellpadding="2" border="0">
 	<tr>
@@ -47,6 +53,8 @@
 	</table>
     
 </h:form>
+</div>
+<div id="maDivDroite" style="float:center;clear:right;">
 <h3>Supression par nom</h3>
 
 	<h:form>
@@ -65,5 +73,26 @@
 	</tr>
      </table>
   </h:form>
+  </div>
+ 
+  <h3>Supression par prénom</h3>
+
+	<h:form>
+       <table>
+    
+         <tr>
+		<td>
+			<h:outputLabel for="firstName" value="prénom"/>
+		</td>
+		<td>
+			<h:inputText   id="fastName" value="#{marinControler.marin.prenom}"/>
+		</td>
+		<td>
+			<h:commandButton value="Supprimer" action="#{marinControler.deletePrenom()}" />
+		   </td>
+	</tr>
+     </table>
+  </h:form>
+ 
 </body>
 </html>
