--- a/src/main/webapp/marin.xhtml
+++ b/src/main/webapp/marin.xhtml
@@ -12,7 +12,9 @@
 <div>
 <img src=" http://localhost:8080/paumardproject/marin.jpg" alt="" style="width: 100%; height: 173px"/>
 </div>
-
+<div id = "menu">
+  <a id ="rechercher" href ="rechercher.xhtml" >chercher un marin</a>
+</div>
 <div id="maDivGauche" style="float:left; width: 378px">
 <h3>Création de marin</h3>
 
