--- a/src/main/webapp/marin.xhtml
+++ b/src/main/webapp/marin.xhtml
@@ -13,6 +13,10 @@
 <img src=" http://localhost:8080/paumardproject/marin.jpg" alt="" style="width: 100%; height: 173px"/>
 </div>
 <div id = "menu">
+<div id = "menu">
+  <a id ="creer" href ="creer.xhtml" >Creer Marin</a>
+  <a id ="supprimerParNom" href ="delete.xhtml" >Suprimer Par Nom</a>
+  <a id ="supprimerParPrenom" href ="deletepre.xhtml" >Suprimer Par Prénom</a>
   <a id ="rechercher" href ="rechercher.xhtml" >chercher un marin</a>
 </div>
 <div id="maDivGauche" style="float:left; width: 378px">
